--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     gap: 25px;
+    margin-right: 30px;
 }
 
 .nav-item {
@@ -12,4 +13,10 @@
 
 :is(.nav-item .nav-link, .nav-item .nav-link.active) {
     color: white;
+}
+
+@media screen and (max-width: 992px) {
+    .navbar-nav {
+        margin-right: 0px;
+    }
 }
