--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -82,7 +82,9 @@
     }
 
     .mascot {
-        display: none;
+        position: relative;
+        width: 300px;
+        height: 300px;
     }
 }
 
