--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -94,4 +94,24 @@
         font-weight: bold;
         font-size: 1.8rem;
     }
+
+    .mascot {
+        position: relative;
+        width: 300px;
+        height: 300px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .mascot {
+        position: relative;
+        width: 300px;
+        height: 300px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .mascot {
+       display: none;
+    }
 }
