--- a/src/components/MatchesSection/MatchesSection.css
+++ b/src/components/MatchesSection/MatchesSection.css
@@ -42,3 +42,9 @@
     font-family: 'Poppins', sans-serif; 
     text-transform: capitalize 
 }
+
+@media screen and (max-width: 768px) {
+    .match-teams h6 {
+        font-size: .8rem;
+    }
+}
